--- a/josephus_problem/pom.xml
+++ b/josephus_problem/pom.xml
@@ -21,9 +21,9 @@
             <version>15.0.1</version>
         </dependency>
         <dependency>
-            <groupId>de.jensd</groupId>
-            <artifactId>fontawesomefx-fontawesome</artifactId>
-            <version>4.7.0-9.1.2</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>16-ea+4</version>
         </dependency>
     </dependencies>
     <build>
