--- a/josephus_problem/pom.xml
+++ b/josephus_problem/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>javafx-media</artifactId>
             <version>16-ea+4</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.15.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
